--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.25 13:43:55<br />
+<b>start</b> - 2023.03.25 15:31:07<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -35.290000000000006<br />
+Hungary_VotiveChurch, not updated, -35.81000000000001<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -414,7 +414,7 @@ Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.490000000000002<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
-Germany_AppenzellerSennenhundRT, <b>updated</b>, 1211, <a href="https://www.munzee.com/map/u0wecspcn/14.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AppenzellerSennenhundRT.json" target="_blank">json</a><br />
+Germany_AppenzellerSennenhundRT, not updated, 0.0<br />
 Germany_PatchworkRT, not updated, 0.060000000000002274<br />
 Germany_FlatsAppenzellerRT, not updated, 0.0<br />
 Germany_WeddingDay kihagyva (100%), <br />
@@ -442,7 +442,7 @@ USA_ChristmasSnowman kihagyva (100%), <br />
 USA_MOAYeti kihagyva (100%), <br />
 USA_MOAFlower kihagyva (100%), <br />
 USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, <b>updated</b>, 213, <a href="https://www.munzee.com/map/u9c2h7w98/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_VirusBomb.json" target="_blank">json</a> <b>100%</b><br />
+Lithuania_VirusBomb kihagyva (100%), <br />
 Lithuania_KaisiadorysHammer kihagyva (100%), <br />
 Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
 Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
@@ -673,7 +673,7 @@ Australia_GattonArrowsArrow1 kihagyva (100%), <br />
 Australia_GattonArrowsArrow2, not updated, 1.0<br />
 Australia_GattonArrowsArrow3, not updated, 0.0<br />
 Australia_GattonArrowsArrow4, not updated, 0.0<br />
-Australia_GattonArrowsArrow5, not updated, 0.0<br />
+Australia_GattonArrowsArrow5, not updated, -0.40000000000000213<br />
 Australia_BeeJewelled kihagyva (100%), <br />
 Australia_SoonBeeSpring kihagyva (100%), <br />
 Australia_WeBeePawns kihagyva (100%), <br />
@@ -748,7 +748,7 @@ Australia_TourDownUnder, not updated, 0.0<br />
 UnitedKingdom_BathBoat, not updated, 0.0<br />
 USA_GCardinalFlat kihagyva (100%), <br />
 Canada_WarblersSquare kihagyva (100%), <br />
-Portugal_Saab9xInMadeira, <b>updated</b>, 111, <a href="https://www.munzee.com/map/etu1c7ttr/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Portugal_Saab9xInMadeira.json" target="_blank">json</a> <b>100%</b><br />
+Portugal_Saab9xInMadeira kihagyva (100%), <br />
 Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
 USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
@@ -788,4 +788,56 @@ USA_FortWorthFighterJet, not updated, 0.0<br />
 USA_TCUHornedFrogs, not updated, 0.0899999999999892<br />
 USA_GeowoodstockXVIITexas, not updated, 0.0<br />
 USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, <b>updated</b>, 340, <a href="https://www.munzee.com/map/9vfcfhj93/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TigerKing.json" target="_blank">json</a><br />
+USA_TigerKing, not updated, 0.0<br />
+USA_TexasGeowoodstock2019 kihagyva (100%), <br />
+USA_FortWorthSucculents kihagyva (100%), <br />
+USA_RobVsMatt, not updated, 0.0<br />
+USA_BrightColoredHorse, not updated, 0.0<br />
+USA_BrightColoredHorseFlats, not updated, 0.0<br />
+USA_RuhRohRAGGY, not updated, 0.0<br />
+USA_PrizeWheel kihagyva (100%), <br />
+USA_EvoHedgehog kihagyva (100%), <br />
+USA_SeahorseByTheSeaShore kihagyva (100%), <br />
+USA_LakeForestMixture, not updated, 0.4700000000000024<br />
+USA_GreenvillesAmethystRoad kihagyva (100%), <br />
+USA_SaintMarysHeart kihagyva (100%), <br />
+USA_GreenvilleOhioSpiritTrophy, not updated, 1.0<br />
+USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
+USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
+USA_GreenvilleZodiacWheels kihagyva (100%), <br />
+USA_GreenvilleRUMCircle, not updated, 0.0<br />
+USA_GreenvilleFlatSurprise, not updated, 0.8200000000000074<br />
+USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
+USA_GreenvilleSouthCarolina, not updated, 0.0<br />
+USA_JaysvilleFlatCircles, not updated, 0.0<br />
+USA_CCTXZeeCret kihagyva (100%), <br />
+USA_DecaturHearts kihagyva (100%), <br />
+USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
+UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
+UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
+USA_ScoobyDooCrossbow, not updated, 0.0<br />
+USA_TexasStateFlag kihagyva (100%), <br />
+USA_Geowoodstock2019 kihagyva (100%), <br />
+USA_MansfieldMuru, not updated, 0.0<br />
+USA_CedarRapidsIAFlag, not updated, 0.0<br />
+Hungary_JewelAndColor kihagyva (100%), <br />
+USA_CRMunzee6thBirthday kihagyva (100%), <br />
+USA_CRAirMysteryTrail kihagyva (100%), <br />
+USA_CRMunzFit20 kihagyva (100%), <br />
+USA_HayesBattlefield kihagyva (100%), <br />
+USA_CREgyptianZodiac kihagyva (100%), <br />
+USA_CherryBombCedarRapids kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
+USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
+USA_GCandyCane kihagyva (100%), <br />
+USA_GCandyCaneFlats, not updated, 0.9000000000000057<br />
+USA_GShamrock kihagyva (100%), <br />
+USA_GShamrockFlats, not updated, 0.3500000000000014<br />
+USA_GPumpkin kihagyva (100%), <br />
+USA_GPumpkinFlats, not updated, 0.37000000000000455<br />
+USA_Mauhaus kihagyva (100%), <br />
+USA_GToyotaCrossbows, not updated, 0.35999999999999943<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.9199999999999875<br />
+USA_GToyota kihagyva (100%), <br />
+USA_GToyotaFlats, not updated, 0.9699999999999989<br />
+USA_GJewelBelt, <b>updated</b>, 514, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
