--- a/feladat.html
+++ b/feladat.html
@@ -1003,3 +1003,4 @@ USA_SouthCountyChristmasTree, <b>updated</b>, 89, <a href="https://www.munzee.co
 USA_TucsonChess, <b>updated</b>, 155, <a href="https://www.munzee.com/map/9t9pk40vz/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TucsonChess.json" target="_blank">json</a><br />
 USA_SpongyMemorial, <b>updated</b>, 100, <a href="https://www.munzee.com/map/9yzen3dve/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpongyMemorial.json" target="_blank">json</a> <b>100%</b><br />
 USA_StLouisParrot, <b>updated</b>, 83, <a href="https://www.munzee.com/map/9yzssztbj/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisParrot.json" target="_blank">json</a> <b>100%</b><br />
+USA_ColorStPeters, <b>updated</b>, 156, <a href="https://www.munzee.com/map/9yzsd7947/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColorStPeters.json" target="_blank">json</a> <b>100%</b><br />
