--- a/feladat.html
+++ b/feladat.html
@@ -1009,3 +1009,4 @@ USA_MissouriBluebird, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9y
 Canada_RichmondHillMoosemate, <b>updated</b>, 148, <a href="https://www.munzee.com/map/dpz92v8es/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_RichmondHillMoosemate.json" target="_blank">json</a><br />
 USA_PiDay2023, <b>updated</b>, 44, <a href="https://www.munzee.com/map/9yzsdfu0q/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDay2023.json" target="_blank">json</a> <b>100%</b><br />
 USA_SpringCherryBlossom, <b>updated</b>, 13, <a href="https://www.munzee.com/map/9yzse53wq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpringCherryBlossom.json" target="_blank">json</a> <b>100%</b><br />
+USA_AppleMini, <b>updated</b>, 35, <a href="https://www.munzee.com/map/9yzse4pep/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleMini.json" target="_blank">json</a><br />
