--- a/feladat.html
+++ b/feladat.html
@@ -1012,3 +1012,4 @@ USA_SpringCherryBlossom, <b>updated</b>, 13, <a href="https://www.munzee.com/map
 USA_AppleMini, <b>updated</b>, 35, <a href="https://www.munzee.com/map/9yzse4pep/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleMini.json" target="_blank">json</a><br />
 USA_BevoMill, <b>updated</b>, 135, <a href="https://www.munzee.com/map/9yzg3zu2y/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BevoMill.json" target="_blank">json</a> <b>100%</b><br />
 USA_VanderbiltPuppy, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9yzsdjm1y/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_VanderbiltPuppy.json" target="_blank">json</a> <b>100%</b><br />
+USA_PiecesMeeple, <b>updated</b>, 101, <a href="https://www.munzee.com/map/9yzgekym8/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiecesMeeple.json" target="_blank">json</a> <b>100%</b><br />
