--- a/feladat.html
+++ b/feladat.html
@@ -1024,3 +1024,4 @@ USA_AcornMini, <b>updated</b>, 33, <a href="https://www.munzee.com/map/9yzse6tf8
 USA_MizzouTiger, <b>updated</b>, 502, <a href="https://www.munzee.com/map/9yymdf9bz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MizzouTiger.json" target="_blank">json</a><br />
 USA_CamoHeart, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9yymdqj77/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CamoHeart.json" target="_blank">json</a><br />
 USA_ColumbiaFlatLou, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yymdc1x9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColumbiaFlatLou.json" target="_blank">json</a><br />
+USA_ColumbiaFlatLouPink, <b>updated</b>, 59, <a href="https://www.munzee.com/map/9yymdc1x9/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColumbiaFlatLouPink.json" target="_blank">json</a><br />
