--- a/feladat.html
+++ b/feladat.html
@@ -1025,3 +1025,4 @@ USA_MizzouTiger, <b>updated</b>, 502, <a href="https://www.munzee.com/map/9yymdf
 USA_CamoHeart, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9yymdqj77/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CamoHeart.json" target="_blank">json</a><br />
 USA_ColumbiaFlatLou, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yymdc1x9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColumbiaFlatLou.json" target="_blank">json</a><br />
 USA_ColumbiaFlatLouPink, <b>updated</b>, 59, <a href="https://www.munzee.com/map/9yymdc1x9/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColumbiaFlatLouPink.json" target="_blank">json</a><br />
+USA_FriscoPark, <b>updated</b>, 87, <a href="https://www.munzee.com/map/dn8008h4k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriscoPark.json" target="_blank">json</a> <b>100%</b><br />
