--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.25 15:31:07<br />
+<b>start</b> - 2023.03.25 18:23:41<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -35.81000000000001<br />
+Hungary_VotiveChurch, not updated, -33.400000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -840,7 +840,7 @@ USA_GToyotaCrossbows, not updated, 0.35999999999999943<br />
 USA_GToyotaCrossbowsBiggy, not updated, 0.9199999999999875<br />
 USA_GToyota kihagyva (100%), <br />
 USA_GToyotaFlats, not updated, 0.9699999999999989<br />
-USA_GJewelBelt, <b>updated</b>, 514, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
+USA_GJewelBelt, not updated, -0.21000000000000796<br />
 USA_GEvoBelt, not updated, 0.3400000000000034<br />
 USA_GBypassMixed kihagyva (100%), <br />
 USA_G62WestEvo, not updated, 0.8300000000000001<br />
@@ -990,48 +990,50 @@ USA_Friendship kihagyva (100%), <br />
 USA_HappyKrautMemorial kihagyva (100%), <br />
 USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-USA_BuckeyesGradCap, <b>updated</b>, 162, <a href="https://www.munzee.com/map/dp5u4kbq4/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BuckeyesGradCap.json" target="_blank">json</a><br />
-Germany_SmellsLikeZeeSpiritKurtCobain, <b>updated</b>, 848, <a href="https://www.munzee.com/map/u0ws1b5wm/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SmellsLikeZeeSpiritKurtCobain.json" target="_blank">json</a><br />
-Poland_BirthdayCake, <b>updated</b>, 163, <a href="https://www.munzee.com/map/u2z5jbuze/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Poland_BirthdayCake.json" target="_blank">json</a> <b>100%</b><br />
-Germany_WipperfurtherSternchen, <b>updated</b>, 131, <a href="https://www.munzee.com/map/u1j6b98kn/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_WipperfurtherSternchen.json" target="_blank">json</a><br />
-UnitedKingdom_BluewaterFlatBlueWhale, <b>updated</b>, 179, <a href="https://www.munzee.com/map/u10hwhngp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_BluewaterFlatBlueWhale.json" target="_blank">json</a><br />
-USA_SummerSun, <b>updated</b>, 28, <a href="https://www.munzee.com/map/9yzsdcnv1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SummerSun.json" target="_blank">json</a> <b>100%</b><br />
-USA_RosesquirrelsAutismPuzzlePiece, <b>updated</b>, 109, <a href="https://www.munzee.com/map/9yzse5kyt/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_RosesquirrelsAutismPuzzlePiece.json" target="_blank">json</a> <b>100%</b><br />
-USA_StLouisCardinalsOFallon, <b>updated</b>, 147, <a href="https://www.munzee.com/map/9yzs8x3g8/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisCardinalsOFallon.json" target="_blank">json</a> <b>100%</b><br />
-USA_ShrewsburyNightVisionGoggles, <b>updated</b>, 92, <a href="https://www.munzee.com/map/9yzg89gbv/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ShrewsburyNightVisionGoggles.json" target="_blank">json</a> <b>100%</b><br />
-USA_SouthCountyChristmasTree, <b>updated</b>, 89, <a href="https://www.munzee.com/map/9yzdzmbdj/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SouthCountyChristmasTree.json" target="_blank">json</a> <b>100%</b><br />
-USA_TucsonChess, <b>updated</b>, 155, <a href="https://www.munzee.com/map/9t9pk40vz/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_TucsonChess.json" target="_blank">json</a><br />
-USA_SpongyMemorial, <b>updated</b>, 100, <a href="https://www.munzee.com/map/9yzen3dve/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpongyMemorial.json" target="_blank">json</a> <b>100%</b><br />
-USA_StLouisParrot, <b>updated</b>, 83, <a href="https://www.munzee.com/map/9yzssztbj/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StLouisParrot.json" target="_blank">json</a> <b>100%</b><br />
-USA_ColorStPeters, <b>updated</b>, 156, <a href="https://www.munzee.com/map/9yzsd7947/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColorStPeters.json" target="_blank">json</a> <b>100%</b><br />
-USA_MarylandHeightsMORUM, <b>updated</b>, 32, <a href="https://www.munzee.com/map/9yzsjvdwf/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MarylandHeightsMORUM.json" target="_blank">json</a> <b>100%</b><br />
-USA_MissouriBluebird, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9yzdzvcr7/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MissouriBluebird.json" target="_blank">json</a> <b>100%</b><br />
-Canada_RichmondHillMoosemate, <b>updated</b>, 148, <a href="https://www.munzee.com/map/dpz92v8es/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_RichmondHillMoosemate.json" target="_blank">json</a><br />
-USA_PiDay2023, <b>updated</b>, 44, <a href="https://www.munzee.com/map/9yzsdfu0q/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiDay2023.json" target="_blank">json</a> <b>100%</b><br />
-USA_SpringCherryBlossom, <b>updated</b>, 13, <a href="https://www.munzee.com/map/9yzse53wq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpringCherryBlossom.json" target="_blank">json</a> <b>100%</b><br />
-USA_AppleMini, <b>updated</b>, 35, <a href="https://www.munzee.com/map/9yzse4pep/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleMini.json" target="_blank">json</a><br />
-USA_BevoMill, <b>updated</b>, 135, <a href="https://www.munzee.com/map/9yzg3zu2y/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BevoMill.json" target="_blank">json</a> <b>100%</b><br />
-USA_VanderbiltPuppy, <b>updated</b>, 63, <a href="https://www.munzee.com/map/9yzsdjm1y/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_VanderbiltPuppy.json" target="_blank">json</a> <b>100%</b><br />
-USA_PiecesMeeple, <b>updated</b>, 101, <a href="https://www.munzee.com/map/9yzgekym8/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PiecesMeeple.json" target="_blank">json</a> <b>100%</b><br />
-USA_LogCabinQuilt, <b>updated</b>, 77, <a href="https://www.munzee.com/map/9yzssgw8q/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LogCabinQuilt.json" target="_blank">json</a> <b>100%</b><br />
-USA_SnowmanSaintPeters, <b>updated</b>, 83, <a href="https://www.munzee.com/map/9yzsdcgz9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SnowmanSaintPeters.json" target="_blank">json</a> <b>100%</b><br />
-USA_WinterDeadBranch, <b>updated</b>, 22, <a href="https://www.munzee.com/map/9yzsdc906/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WinterDeadBranch.json" target="_blank">json</a> <b>100%</b><br />
-USA_CandyCaneLane, <b>updated</b>, 88, <a href="https://www.munzee.com/map/9yzg90fud/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CandyCaneLane.json" target="_blank">json</a> <b>100%</b><br />
-USA_MiniSnowflake2, <b>updated</b>, 18, <a href="https://www.munzee.com/map/9yzsdf25h/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MiniSnowflake2.json" target="_blank">json</a> <b>100%</b><br />
-USA_BirdhousesGoldfinch, <b>updated</b>, 88, <a href="https://www.munzee.com/map/9yzep3hy1/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BirdhousesGoldfinch.json" target="_blank">json</a> <b>100%</b><br />
-USA_PecanMini, <b>updated</b>, 31, <a href="https://www.munzee.com/map/9yzsdfrjc/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PecanMini.json" target="_blank">json</a> <b>100%</b><br />
-USA_AcornMini, <b>updated</b>, 33, <a href="https://www.munzee.com/map/9yzse6tf8/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AcornMini.json" target="_blank">json</a> <b>100%</b><br />
-USA_MizzouTiger, <b>updated</b>, 502, <a href="https://www.munzee.com/map/9yymdf9bz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MizzouTiger.json" target="_blank">json</a><br />
-USA_CamoHeart, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9yymdqj77/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CamoHeart.json" target="_blank">json</a><br />
-USA_ColumbiaFlatLou, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9yymdc1x9/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColumbiaFlatLou.json" target="_blank">json</a><br />
-USA_ColumbiaFlatLouPink, <b>updated</b>, 59, <a href="https://www.munzee.com/map/9yymdc1x9/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ColumbiaFlatLouPink.json" target="_blank">json</a><br />
-USA_FriscoPark, <b>updated</b>, 87, <a href="https://www.munzee.com/map/dn8008h4k/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FriscoPark.json" target="_blank">json</a> <b>100%</b><br />
-USA_GRMeijerFarm, <b>updated</b>, 167, <a href="https://www.munzee.com/map/dpehjsmjd/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GRMeijerFarm.json" target="_blank">json</a><br />
-USA_SecondaryComplexEverything, <b>updated</b>, 142, <a href="https://www.munzee.com/map/dpefc2mr0/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SecondaryComplexEverything.json" target="_blank">json</a><br />
-USA_SecondaryComplexEverythingFlats, <b>updated</b>, 48, <a href="https://www.munzee.com/map/dpefc2mr0/16.2009" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SecondaryComplexEverythingFlats.json" target="_blank">json</a><br />
-USA_GrandRapidsCornucopia, <b>updated</b>, 72, <a href="https://www.munzee.com/map/dpehhx00n/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GrandRapidsCornucopia.json" target="_blank">json</a> <b>100%</b><br />
-Germany_TheGardenHedge, <b>updated</b>, 760, <a href="https://www.munzee.com/map/u1j55qjjc/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_TheGardenHedge.json" target="_blank">json</a> <b>100%</b><br />
-USA_CalvaryOrCedarLawnCemetery, <b>updated</b>, 137, <a href="https://www.munzee.com/map/dr728vn7g/14.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CalvaryOrCedarLawnCemetery.json" target="_blank">json</a> <b>100%</b><br />
-Canada_YellowWarbler, <b>updated</b>, 305, <a href="https://www.munzee.com/map/dpz8e1rg8/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_YellowWarbler.json" target="_blank">json</a><br />
-USA_FlyingMUNZkey, <b>updated</b>, 131, <a href="https://www.munzee.com/map/dppmnj0jq/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlyingMUNZkey.json" target="_blank">json</a><br />
-USA_ArchdaleButterfly, <b>updated</b>, 147, <a href="https://www.munzee.com/map/dnrhk1vkf/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ArchdaleButterfly.json" target="_blank">json</a> <b>100%</b><br />
+USA_BuckeyesGradCap, not updated, 0.0<br />
+Germany_SmellsLikeZeeSpiritKurtCobain, not updated, 0.030000000000001137<br />
+Poland_BirthdayCake kihagyva (100%), <br />
+Germany_WipperfurtherSternchen, not updated, 0.0<br />
+UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
+USA_SummerSun kihagyva (100%), <br />
+USA_RosesquirrelsAutismPuzzlePiece kihagyva (100%), <br />
+USA_StLouisCardinalsOFallon kihagyva (100%), <br />
+USA_ShrewsburyNightVisionGoggles kihagyva (100%), <br />
+USA_SouthCountyChristmasTree kihagyva (100%), <br />
+USA_TucsonChess, not updated, 0.0<br />
+USA_SpongyMemorial kihagyva (100%), <br />
+USA_StLouisParrot kihagyva (100%), <br />
+USA_ColorStPeters kihagyva (100%), <br />
+USA_MarylandHeightsMORUM kihagyva (100%), <br />
+USA_MissouriBluebird kihagyva (100%), <br />
+Canada_RichmondHillMoosemate, not updated, 0.0<br />
+USA_PiDay2023 kihagyva (100%), <br />
+USA_SpringCherryBlossom kihagyva (100%), <br />
+USA_AppleMini, not updated, 0.0<br />
+USA_BevoMill kihagyva (100%), <br />
+USA_VanderbiltPuppy kihagyva (100%), <br />
+USA_PiecesMeeple kihagyva (100%), <br />
+USA_LogCabinQuilt kihagyva (100%), <br />
+USA_SnowmanSaintPeters kihagyva (100%), <br />
+USA_WinterDeadBranch kihagyva (100%), <br />
+USA_CandyCaneLane kihagyva (100%), <br />
+USA_MiniSnowflake2 kihagyva (100%), <br />
+USA_BirdhousesGoldfinch kihagyva (100%), <br />
+USA_PecanMini kihagyva (100%), <br />
+USA_AcornMini kihagyva (100%), <br />
+USA_MizzouTiger, not updated, 0.0<br />
+USA_CamoHeart, not updated, 0.0<br />
+USA_ColumbiaFlatLou, not updated, 0.0<br />
+USA_ColumbiaFlatLouPink, not updated, 0.0<br />
+USA_FriscoPark kihagyva (100%), <br />
+USA_GRMeijerFarm, not updated, 0.0<br />
+USA_SecondaryComplexEverything, not updated, 0.0<br />
+USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
+USA_GrandRapidsCornucopia kihagyva (100%), <br />
+Germany_TheGardenHedge kihagyva (100%), <br />
+USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
+Canada_YellowWarbler, not updated, 0.0<br />
+USA_FlyingMUNZkey, not updated, 0.0<br />
+USA_ArchdaleButterfly kihagyva (100%), <br />
+<b>stop</b> - 2023.03.25 18:56:42<br />
+összesen 1980<br />
